--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,42 @@ backend_test:
   only:
     - main
 
-# Deploy Job (for Backend only)
+# Frontend Build and Test
+frontend_build:
+  stage: build
+  image: node:18
+  script:
+    - cd frontend
+    - npm install
+    - npm run build  # assuming there is a build script in frontend/package.json
+  only:
+    - main
+
+frontend_test:
+  stage: test
+  image: node:18
+  services:
+    - name: mysql:8.0
+      alias: mysql
+      command: [
+        "--default-authentication-plugin=mysql_native_password",
+        "--health-cmd='mysqladmin ping'",
+        "--health-interval=10s",
+        "--health-timeout=5s",
+        "--health-retries=3"
+      ]
+  before_script:
+    - cd frontend
+    - apt-get update && apt-get install -y mysql-client
+    - echo "Testing connection to MySQL"
+    - until mysqladmin ping -h "127.0.0.1" --silent; do sleep 1; done
+  script:
+    - echo "Running frontend tests..."
+    - npm run test
+  only:
+    - main
+
+# Deploy Job (for both Backend and Frontend)
 deploy:
   stage: deploy
   script:
@@ -54,5 +89,8 @@ deploy:
     # Deploy backend
     - cd backend
     - npm run deploy  # Assuming there is a deploy script in backend/package.json
+    # Deploy frontend
+    - cd ../frontend
+    - npm run deploy  # Assuming there is a deploy script in frontend/package.json
   only:
     - main
