--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:populate": "cross-env POPULATE_DATA=true node server.js",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "pm2 deploy ecosystem.config.js production"
   },
   "repository": {
     "type": "git",
