--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve",
     "start": "vue-cli-service serve",
+    "deploy": "npm run build && netlify deploy",
     "test": "vue-cli-service test:unit"
   },
   "dependencies": {
