--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -102,12 +102,17 @@ jobs:
   # Deploy Frontend
   deploy_frontend:
     runs-on: ubuntu-latest
-    needs: [backend_build, frontend_build]  # Ensure frontend build and tests run before deploy
+    needs: [backend_build, frontend_build]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install Dependencies
+        run: |
+          cd frontend
+          npm install  # Install all dependencies
+
       - name: Deploy Frontend
         run: |
           cd frontend
-          npm run deploy  # Replace with your actual deploy command/script
+          npm run deploy  # Deploy script
