--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -85,19 +85,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install Dependencies
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'  # Adjust this to your required Node.js version
+
+      - name: Install Railway CLI
+        run: |
+          npm install -g railway  # Install Railway CLI globally
+
+      - name: Deploy Backend to Railway
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use GitHub secrets for sensitive data
         run: |
           cd backend
-          npm install  # Install backend dependencies
-
-      - name: Install PM2
-        run: |
-          npm install -g pm2  # Install PM2 globally
-
-      - name: Deploy Backend
-        run: |
-          cd backend
-          pm2 deploy ecosystem.config.js production  # Deploy using pm2
+          railway up  # Deploy the backend using Railway CLI
 
   # Deploy Frontend
   deploy_frontend:
