--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -97,6 +97,7 @@ jobs:
       - name: Link Railway Project
         env:
           RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Reference the secret correctly
+          RAILWAY_ENVIRONMENT: production
         run: |
           cd backend
           railway link --project 09e8b6fb-6b98-44e7-8dee-0d93e3a95269 --team Personal  # Link to the Railway project with the specified ID and team
