--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Install Railway CLI
         run: |
-          npm install -g @railway/cli  # Install the new Railway CLI globally
+          npm install -g @railway/cli  # Install the Railway CLI globally
 
       - name: Link Railway Project
         env:
@@ -106,8 +106,10 @@ jobs:
         env:
           RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use GitHub secrets for sensitive data
         run: |
+          # Set the RAILWAY_API_TOKEN environment variable explicitly for Railway CLI
+          export RAILWAY_API_TOKEN=${RAILWAY_API_TOKEN}
           cd backend
-          railway up  # Deploy the backend using Railway CLI
+          railway link --project 09e8b6fb-6b98-44e7-8dee-0d93e3a95269 --team Personal  # Link the Railway project
 
   # Deploy Frontend
   deploy_frontend:
