--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -92,24 +92,20 @@ jobs:
 
       - name: Install Railway CLI
         run: |
-          npm install -g @railway/cli  # Install the Railway CLI globally
+          npm install -g railway  # Install the Railway CLI globally
+
+      - name: Authenticate with Railway
+        run: railway login --api-token ${{ secrets.RAILWAY_API_TOKEN }}  # Use the GitHub secret for the Railway API token
 
       - name: Link Railway Project
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Reference the secret correctly
-          RAILWAY_ENVIRONMENT: production
         run: |
           cd backend
           railway link --project 09e8b6fb-6b98-44e7-8dee-0d93e3a95269 --team Personal  # Link to the Railway project
 
       - name: Deploy Backend to Railway
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use GitHub secrets for sensitive data
         run: |
-          # Set the RAILWAY_API_TOKEN environment variable explicitly for Railway CLI
-          export RAILWAY_API_TOKEN=${RAILWAY_API_TOKEN}
           cd backend
-          railway link --project 09e8b6fb-6b98-44e7-8dee-0d93e3a95269 --team Personal  # Link the Railway project
+          railway up  # Deploy the backend to Railway
 
   # Deploy Frontend
   deploy_frontend:
