--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Install Railway CLI
         run: |
-          npm install -g railway  # Install the Railway CLI globally
+          npm install -g @railway/cli  # Install the Railway CLI globally
 
       - name: Authenticate with Railway
         run: railway login --api-token ${{ secrets.RAILWAY_API_TOKEN }}  # Use the GitHub secret for the Railway API token
