--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -95,16 +95,22 @@ jobs:
           npm install -g @railway/cli  # Install the updated Railway CLI
 
       - name: Link Railway Project
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use the API token
+          RAILWAY_PROJECT_ID: "09e8b6fb-6b98-44e7-8dee-0d93e3a95269"  # Your project ID
+          RAILWAY_TEAM: "Personal"  # Your Railway team name
         run: |
           cd backend
-          railway link --project 09e8b6fb-6b98-44e7-8dee-0d93e3a95269 --team Personal  # Link to the Railway project
+          railway link --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --env production --service cyber_school_vj
 
       - name: Deploy Backend to Railway
         env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use the GitHub secret for the Railway API token
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use the API token
+          RAILWAY_PROJECT_ID: "09e8b6fb-6b98-44e7-8dee-0d93e3a95269"  # Your project ID
+          RAILWAY_TEAM: "Personal"  # Your Railway team name
         run: |
           cd backend
-          railway up  # Deploy the backend to Railway
+          railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --env production --service cyber_school_vj  # Deploy the backend to Railway
 
   # Deploy Frontend
   deploy_frontend:
