--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -77,34 +77,29 @@ jobs:
           cd frontend
           npm run test
 
-  # Deploy Backend
-  deploy_backend:
+  # Deploy
+  deploy:
     runs-on: ubuntu-latest
-    needs: [backend_build, frontend_build]  # Ensure backend build and tests run before deploy
+    needs: [backend_build, frontend_build]  # Ensure this job runs after the build and test jobs
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'  # Adjust this to your required Node.js version
-
       - name: Install Railway CLI
-        run: |
-          npm install -g @railway/cli  # Install the updated Railway CLI
+        run: npm install -g @railway/cli  # Install the Railway CLI
 
       - name: Login to Railway
-        run: |
-          echo $RAILWAY_API_TOKEN | railway login  # Use a pipe to pass the token
+        run: echo $RAILWAY_API_TOKEN | railway login  # Pipe the token for login
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the API token is set
 
       - name: Link Railway Project
         run: |
           cd backend
           railway link --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
         env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Make sure the API token is available as an environment variable
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
 
       - name: Deploy Backend to Railway
         run: |
@@ -113,10 +108,18 @@ jobs:
         env:
           RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available for the deployment
 
-  # Deploy Frontend
+      - name: Build and Deploy Frontend
+        run: |
+          cd frontend
+          npm run build  # Build the frontend application
+          railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service frontend_service_name  # Adjust the service name accordingly
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available for the deployment
+
+  # Frontend Deploy (if needed separately)
   deploy_frontend:
     runs-on: ubuntu-latest
-    needs: [backend_build, frontend_build]
+    needs: frontend_build  # Ensure this job runs after the frontend build job
 
     steps:
       - name: Checkout repository
