--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -77,47 +77,47 @@ jobs:
           cd frontend
           npm run test
 
-  # Deploy to Railway
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [backend_build, frontend_build]  # Ensure this job runs after builds
+  # # Deploy to Railway
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: [backend_build, frontend_build]  # Ensure this job runs after builds
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v2
 
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli  # Install the Railway CLI
+  #     - name: Install Railway CLI
+  #       run: npm install -g @railway/cli  # Install the Railway CLI
 
-      - name: Login to Railway
-        run: |
-          echo $RAILWAY_API_TOKEN | railway login  # Use a pipe to pass the token
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use the API token
+  #     - name: Login to Railway
+  #       run: |
+  #         echo $RAILWAY_API_TOKEN | railway login  # Use a pipe to pass the token
+  #       env:
+  #         RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use the API token
 
-      - name: Link Railway Project
-        run: |
-          cd backend
-          railway link --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
+  #     - name: Link Railway Project
+  #       run: |
+  #         cd backend
+  #         railway link --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
+  #       env:
+  #         RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
 
-      - name: Deploy Backend to Railway
-        run: |
-          cd backend
-          railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
+  #     - name: Deploy Backend to Railway
+  #       run: |
+  #         cd backend
+  #         railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
+  #       env:
+  #         RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
 
-      - name: Build and Deploy Frontend
-        run: |
-          cd frontend
-          npm run build  # Build the frontend application
-          railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service frontend_service_name  # Adjust the service name accordingly
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
+  #     - name: Build and Deploy Frontend
+  #       run: |
+  #         cd frontend
+  #         npm run build  # Build the frontend application
+  #         railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service frontend_service_name  # Adjust the service name accordingly
+  #       env:
+  #         RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
 
-  # Frontend Deploy (if needed separately)
+  # # Frontend Deploy (if needed separately)
   deploy_frontend:
     runs-on: ubuntu-latest
     needs: frontend_build  # Ensure this job runs after the frontend build job
