--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -77,47 +77,39 @@ jobs:
           cd frontend
           npm run test
 
-  # # Deploy to Railway
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: [backend_build, frontend_build]  # Ensure this job runs after builds
+  # Deploy Backend to Railway
+  deploy_backend:
+    runs-on: ubuntu-latest
+    needs: [backend_build]  # Ensure this job runs after the backend build
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-  #     - name: Install Railway CLI
-  #       run: npm install -g @railway/cli  # Install the Railway CLI
+      - name: Install Railway CLI
+        run: npm install -g @railway/cli  # Install the Railway CLI
 
-  #     - name: Login to Railway
-  #       run: |
-  #         echo $RAILWAY_API_TOKEN | railway login  # Use a pipe to pass the token
-  #       env:
-  #         RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use the API token
+      - name: Login to Railway
+        run: |
+          echo $RAILWAY_API_TOKEN | railway login  # Use a pipe to pass the token
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use the API token
 
-  #     - name: Link Railway Project
-  #       run: |
-  #         cd backend
-  #         railway link --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
-  #       env:
-  #         RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
+      - name: Link Railway Project
+        run: |
+          cd backend
+          railway link --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
 
-  #     - name: Deploy Backend to Railway
-  #       run: |
-  #         cd backend
-  #         railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
-  #       env:
-  #         RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
+      - name: Deploy Backend to Railway
+        run: |
+          cd backend
+          railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
 
-  #     - name: Build and Deploy Frontend
-  #       run: |
-  #         cd frontend
-  #         npm run build  # Build the frontend application
-  #         railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service frontend_service_name  # Adjust the service name accordingly
-  #       env:
-  #         RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
-
-  # # Frontend Deploy (if needed separately)
+  # Deploy Frontend (optional: if frontend deployment is needed separately)
   deploy_frontend:
     runs-on: ubuntu-latest
     needs: frontend_build  # Ensure this job runs after the frontend build job
@@ -131,15 +123,10 @@ jobs:
           cd frontend
           npm install  # Install all dependencies
 
-      - name: Install Netlify CLI
-        run: |
-          npm install -g netlify-cli  # Install the Netlify CLI globally
-
       - name: Build and Deploy Frontend
         run: |
           cd frontend
-          npm run build  # Build the Vue.js application
-          netlify deploy --prod --site $NETLIFY_SITE_ID --dir dist  # Deploy to production using the site ID and authenticated with the token
+          npm run build  # Build the frontend application
+          railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service frontend_service_name  # Deploy to Railway (adjust service name accordingly)
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: a76413ba-64fe-4d88-bdaf-c8b3b714ed3b
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
