--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -77,43 +77,44 @@ jobs:
           cd frontend
           npm run test
 
-  # Deploy Backend to Railway
+  # Deploy Backend
   deploy_backend:
     runs-on: ubuntu-latest
-    needs: [backend_build]  # Ensure this job runs after the backend build
-
+    needs: [backend_build, frontend_build]  # Ensure backend build and tests run before deploy
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli  # Install the Railway CLI
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'  # Adjust this to your required Node.js version
 
-      - name: Login to Railway
+      - name: Install Railway CLI
         run: |
-          railway login --apiToken $RAILWAY_API_TOKEN  # Non-interactive login with API token
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use the API token
+          npm install -g @railway/cli  # Install the Railway CLI globally
 
       - name: Link Railway Project
+        env:
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Reference the secret correctly
+          RAILWAY_ENVIRONMENT: production
         run: |
           cd backend
-          railway link --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
+          railway link --project 09e8b6fb-6b98-44e7-8dee-0d93e3a95269 --team Personal  # Link to the Railway project
 
       - name: Deploy Backend to Railway
-        run: |
-          cd backend
-          railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service cyber_school_vj
         env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Ensure the token is available
+          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}  # Use GitHub secrets for sensitive data
+        run: |
+          # Set the RAILWAY_API_TOKEN environment variable explicitly for Railway CLI
+          export RAILWAY_API_TOKEN=${RAILWAY_API_TOKEN}
+          cd backend
+          railway link --project 09e8b6fb-6b98-44e7-8dee-0d93e3a95269 --team Personal  # Link the Railway project
 
-  # Deploy Frontend (optional: if frontend deployment is needed separately)
+  # Deploy Frontend
   deploy_frontend:
     runs-on: ubuntu-latest
-    needs: frontend_build  # Ensure this job runs after the frontend build job
-
+    needs: [backend_build, frontend_build]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -123,10 +124,15 @@ jobs:
           cd frontend
           npm install  # Install all dependencies
 
+      - name: Install Netlify CLI
+        run: |
+          npm install -g netlify-cli  # Install the Netlify CLI globally
+
       - name: Build and Deploy Frontend
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}  # Use the secret for authentication
+          NETLIFY_SITE_ID: a76413ba-64fe-4d88-bdaf-c8b3b714ed3b  # Your Site ID
         run: |
           cd frontend
-          npm run build  # Build the frontend application
-          railway up --project $RAILWAY_PROJECT_ID --team $RAILWAY_TEAM --environment production --service frontend_service_name  # Deploy to Railway (adjust service name accordingly)
-        env:
-          RAILWAY_API_TOKEN: ${{ secrets.RAILWAY_API_TOKEN }}
+          npm run build  # Build the Vue.js application
+          netlify deploy --prod --site $NETLIFY_SITE_ID --dir dist  # Deploy to production using the site ID and authenticated with the token in the environment
